[package]
name = "ironpass-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = { version = "0.10", features = ["std"] }
argon2 = { version = "0.5", features = ["std"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"

[profile.release]
lto = true
opt-level = "z"